--- a/MongoMigrationWebApp/Components/MigrationSettings.razor
+++ b/MongoMigrationWebApp/Components/MigrationSettings.razor
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="csbatchduration" class="form-label">Duration (in minutes) Change Stream Batch</label>
+                    <label for="csbatchduration" class="form-label">Max Duration (in minutes) Change Stream Batch</label>
                     <input type="number" id="csbatchduration" class="form-control" @bind="Configuration.ChangeStreamBatchDuration" />
                 </div>
 
@@ -111,9 +111,9 @@
             return;
         }
 
-        if (Configuration.ChangeStreamMaxDocsInBatch < 100 || Configuration.ChangeStreamMaxDocsInBatch > 1000000) // Fixed condition to compare correctly
+        if (Configuration.ChangeStreamMaxDocsInBatch < 100 || Configuration.ChangeStreamMaxDocsInBatch > 10000) // Fixed condition to compare correctly
         {
-            errorMessage = "Max Documents per Batch should be between 100 and 1000000."; // Corrected error message
+            errorMessage = "Max Documents per Batch should be between 100 and 10000."; // Corrected error message
             return;
         }
 
