--- a/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
+++ b/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
@@ -79,7 +79,7 @@
 
 @if (_yesNoDialogOpen)
 {
-   <YesNoDialog Type=_yesNoDialogType Caption="Confirmation Required" Message="@_message" OnClose="@YesNoDialogSubmit" />
+   <YesNoDialog Type=_yesNoDiaLogType Caption="Confirmation Required" Message="@_message" OnClose="@YesNoDialogSubmit" />
 }
 
 @if (_manageCollectionDialogOpen && MigrationJob != null)
@@ -137,7 +137,7 @@
                             @(unit.SourceStatus == CollectionStatus.NotFound ? "MISSING or EMPTY" : (unit.RestoreComplete || unit.RestorePercent == 100 ? "Success" : $"{unit.RestorePercent:F1}%"))
                         </td>
                     }
-                    @if (MigrationJob != null && MigrationJob.IsOnline && !MigrationJob.ProcessingSyncBack)
+                    @if (MigrationJob != null && MigrationJob.IsOnline)
                     {
                         <td>
                             @GetChangeStreamLag(unit, MigrationJob.ProcessingSyncBack)
@@ -160,15 +160,15 @@
     }
 </div>
 
-@if (LogBucket != null && LogBucket.GetVerboseMessages() != null && LogBucket.GetVerboseMessages().Count > 0 && _logBackupFile == string.Empty)
- {
+@if (LogBucket != null && JobManager.Log.GetVerboseMessages() != null && JobManager.Log.GetVerboseMessages().Count > 0 && _logBackupFile == string.Empty)
+{
     <h5 class="pt-4">
         Monitor
     </h5>
     <div>
         <table class="table message-output">
             <tbody>           
-                @foreach (var logObject in LogBucket.GetVerboseMessages())
+                @foreach (var logObject in JobManager.Log.GetVerboseMessages())
                 {
                     <tr class="@GetRowClass(logObject.Type.ToString(), logObject.Message)">
                         <td>
@@ -188,7 +188,7 @@
     </div>
 }
 
-@if (LogBucket != null && LogBucket.Logs != null && _logBackupFile == string.Empty)
+@if (LogBucket != null && LogBucket != null && _logBackupFile == string.Empty)
 {
     <h5 class=" pt-4">
         <button class="btn btn-light" @onclick="DownloadFile" title="Download Log File"  style="border: none; background: transparent;">
@@ -221,7 +221,7 @@
                     <td> ..... </td>
                 </tr>
 
-                @foreach (var logObject in LogBucket.Logs.Take(30).Reverse()) // Reverse the top 10 items
+                @foreach (var logObject in LogBucket.Logs.Take(30).Reverse()) // Reverse the top 30 items
                 {
                     <tr class="@GetRowClass(logObject.Type.ToString(),logObject.Message)">
                         <td style="width: 120px;">@logObject.Datetime</td>
@@ -270,7 +270,7 @@ else if (@_logBackupFile !=string.Empty )
     private Timer? _refreshTimer;
     private string _message = string.Empty;
     private bool _yesNoDialogOpen;
-    private YesNoDialog.Category _yesNoDialogType= YesNoDialog.Category.CutoverNot;
+    private YesNoDialog.Category _yesNoDiaLogType= YesNoDialog.Category.CutoverNot;
     private bool _manageCollectionDialogOpen;
     private bool _resetChangeStreamDialogOpen;
     private string _logBackupFile = string.Empty;
@@ -337,7 +337,7 @@ else if (@_logBackupFile !=string.Empty )
     private void Refresh(object? state)
     {
         MigrationJob = JobManager.GetMigrations().Find(m => m.Id == JobId);
-        LogBucket = JobManager.GetLogBucket(JobId, out string logBackupFile);
+        LogBucket = JobManager.Log.ReadLogFile(JobId, out string logBackupFile);
 
         if (logBackupFile != JobId)
         {
@@ -530,7 +530,7 @@ else if (@_logBackupFile !=string.Empty )
     private void InitSyncBackJob()
     {
         _message = "You are about to initiate cutover and begin syncing data back to the source. Proceed only if all changes from the source have already been replicated to the target. This action is irreversible. Are you sure you want to cutover?";
-        _yesNoDialogType = YesNoDialog.Category.SyncBackNot;
+        _yesNoDiaLogType = YesNoDialog.Category.SyncBackNot;
         _yesNoDialogOpen = true;      
     }
 
@@ -539,12 +539,12 @@ else if (@_logBackupFile !=string.Empty )
         if (MigrationJob.ProcessingSyncBack)
         {
             _message = "You can't resume a job after its completed. Are you sure you want to complete the job?";
-            _yesNoDialogType = YesNoDialog.Category.CompleteNot;
+            _yesNoDiaLogType = YesNoDialog.Category.CompleteNot;
         }
         else
         {
             _message = "You can't resume a job after its cutover. Are you sure you want to cutover?";
-            _yesNoDialogType = YesNoDialog.Category.CutoverNot;
+            _yesNoDiaLogType = YesNoDialog.Category.CutoverNot;
         }
         _yesNoDialogOpen = true;
     }
@@ -585,7 +585,7 @@ else if (@_logBackupFile !=string.Empty )
         _yesNoDialogOpen = false;
         if (result.IsConfirmed)
         {
-            if (result.DialogType == YesNoDialog.Category.CutoverNot || result.DialogType == YesNoDialog.Category.CompleteNot)
+            if (result.DiaLogType == YesNoDialog.Category.CutoverNot || result.DiaLogType == YesNoDialog.Category.CompleteNot)
             {
                 JobManager.MigrationWorker.StopMigration();
                 MigrationJob.IsCancelled = true;
@@ -594,7 +594,7 @@ else if (@_logBackupFile !=string.Empty )
                 JobManager.Save();
                 _refreshTimer = null;
             }
-            else if (result.DialogType == YesNoDialog.Category.SyncBackNot)
+            else if (result.DiaLogType == YesNoDialog.Category.SyncBackNot)
             {
 
                 JobManager.MigrationWorker.SyncBackToSource(MigrationJob.SourceConnectionString, MigrationJob.TargetConnectionString, MigrationJob);
