--- a/MongoMigrationWebApp/Pages/Index.razor
+++ b/MongoMigrationWebApp/Pages/Index.razor
@@ -28,7 +28,7 @@
 {
     @if (migrationJobs?.Count == 0)
     {
-        <div>No migrations could be found</div>
+        <div>No migrations could be found</div>        
     }
     else
     {
@@ -73,6 +73,9 @@
                 }
             </tbody>
         </table>
+        <div class="d-flex align-items-center mb-3">
+            <button class="btn btn-warning mx-2" title="Use backup to recover job data if current data is corrupted or lost." @onclick="RestoreBackup">Go Back One Hour and Recover Jobs</button>
+        </div>
     }
 }
 
@@ -85,6 +88,12 @@
 {
     <YesNoDialog Type="YesNoDialog.Category.DeleteNot" Caption="Confirm Delete" Message="@_message" OnClose="@YesNoDialogSubmit" />
 }
+
+@if (_recoverDialogOpen)
+{
+    <YesNoDialog Type="YesNoDialog.Category.RecoverNot" Caption="Confirm Recovery from Backup" Message="@_message" OnClose="@RestoreBackupSubmit" />
+}
+
 
 @if (_messageDialogOpen)
 {
@@ -104,6 +113,7 @@
     private bool _migrationDetailsPopUpOpen;
     private bool _yesNoDialogOpen;
     private bool _messageDialogOpen;
+    private bool _recoverDialogOpen;
     private bool _editSettingsOpen;
 
     private string _message = string.Empty;
@@ -145,6 +155,63 @@
         else
         {
             Console.Error.WriteLine($"Failed to download log file: Jobs.json");
+        }
+    }
+
+    private async Task RestoreBackup()
+    {
+        var backupDate = JobManager.GetBackupDate();
+
+        if (backupDate == DateTime.MinValue)
+        {
+            _message = "No backup file found.";
+            _messageDialogOpen = true;
+            return;
+        }
+        _message = $"This action stop any running jobs and  will overwrite the current migration jobs with the backup from (UTC) {backupDate}. Are you sure you want to proceed?";
+        _recoverDialogOpen = true;
+    }
+
+    private void RestoreBackupSubmit(YesNoDialog.YesNoDialogResult result)
+    {
+        try
+        {
+            _recoverDialogOpen = false;
+            if (!result.IsConfirmed)
+            {
+                return;
+            }
+            
+            
+            foreach(var job in JobManager.GetMigrations())
+            {
+                job.IsCancelled = true;
+                job.CurrentlyActive = false;
+                JobManager.CancelMigration(job.Id);
+            }
+            JobManager.MigrationWorker.StopMigration();
+    
+
+            bool success = JobManager.RestoreFromBack();
+            if (success)
+            {
+                migrationJobs = JobManager.GetMigrations();
+                _loadingComplete = true;
+            }
+            else
+            {
+                _message = "Failed to restore backup.";
+                _messageDialogOpen = true;
+            }
+        }
+        catch (Exception ex)
+        {
+            _message = "Failed to restore backup.";
+            _messageDialogOpen = true;
+        }
+        finally
+        {           
+            _selectedMigrationJob = null;
         }
     }
 
